# SkillBridge

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
accounts/: forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_is_admin_alter_user_login_at_and_more.py  0003_deleteduserdata.py
accounts/templatetags/: custom_filters.py  form_utils.py
admin_portal/: forms.py  mixins.py  models.py  urls.py  views.py  views_qna.py
admin_portal/migrations/: 0001_initial.py
admin_portal/templatetags/: admin_portal_extras.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
courses/: models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lecture_duration.py  0003_question.py  0003_rename_video_url_lecture_video_file.py  0004_alter_course_created_at_and_more.py
doc/: dbdiagram.txt
docs/: ERD.md  PRD.md
learning/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
learning/migrations/: 0001_initial.py  0002_alter_certificate_certificate_number_and_more.py
nginx/: nginx.conf
payments/: admin.py  models.py  payment_client.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_imp_uid_alter_payment_merchant_uid.py  0003_alter_payment_amount.py  0004_alter_payment_created_at_alter_payment_imp_uid_and_more.py  (+1 more)
skillbridge/: apps.py
templates/: base.html  footer.html  home_intro.html  navbar.html
(+75 files in other folders)
